@@ -37,9 +37,6 @@ Stop (exit) at some position in the log (does not work with STDIN).
 \fB\-t, \-\-stop\-at\-time SECONDS\fR
 Stop (exit) after a specified number of seconds.
 .TP
-\fB    \-\-stop\-on\-idle\fR
-Stop on break in activity. May be combined with \-\-stop\-position.
-.TP
 \fB    \-\-stop\-at\-end\fR
 Stop (exit) at the end of the log / stream.
 .TP
