@@ -1,10 +1,12 @@
 0.27:
  * Display time stops at the time of the last commit.
+ * Users fade out when end reached rather than ending abruptly.
  * Position slider is now hidden by default if recording a video.
  * Automatic camera rotation for better use of screen space.
  * Support international keyboards (Peter Kjellerstedt).
  * C++ efficiency improvements (Jacob Metcalfe).
  * Fixed crash when reading from STDIN.
+ * Fixed intermittent crash closing Gource when using --output-ppm-stream.
  * Added ini style config file support (see --load/save-config).
  * Added support for multiple repositories.
  * Added screenshot button (F12). Screenshots respect the alpha channel.
